[package]
name = "song_spectre"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
futures = "0.3.30"
image = "0.25.1"
indexmap = "2.2.6"
tempfile = "3.10.1"
[dependencies.windows]
version = "0.57.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Media",
    "Media_Control",
    "Win32_System_WinRT",
    "Foundation_Collections",
    "Storage_Streams"
]
 
