[profile.release]
debug = true
[package]
name = "song_spectre"
version = "0.0.5"
edition = "2021"

[dependencies]
base64 = "0.22.1"
futures = "0.3.30"
image = "0.25.2"
indexmap = "2.5.0"
tempfile = "3.12.0"
[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Media",
    "Media_Control",
    "Win32_System_WinRT",
    "Foundation_Collections",
    "Storage_Streams",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader"
]
 
